Kubernetes_Server/Template/Devops/Logs/kubernetes-logstash.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: kube-logs-elk
spec:
  ports:
  - port: 5044
    targetPort: beats
  selector:
    name: logstash
  clusterIP: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: kube-logs-elk
spec:
  selector:
    matchLabels:
      name: logstash
  template:
    metadata:
      labels:
        name: logstash
        srv: srv-logstash
    spec:
      containers:
      - name: logstash
        image: docker.io/kubeimages/logstash:7.9.3    # 该镜像支持 arm64 和 amd64 两种架构
        ports:
        - containerPort: 5044
          name: beats
        command:
        - logstash
        - '-f'
        - '/etc/logstash_c/logstash.conf'
        volumeMounts:
        - name: config-volume
          mountPath: /etc/logstash_c/
        - name: config-yaml-volume
          mountPath: /usr/share/logstash/config/
        - name: timezone
          mountPath: /etc/localtime
        resources:    # logstash 一定要加上资源限制，避免对其他服务造成资源抢占影响
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 700m
            memory: 1024Mi
      # initContainers:   # 容器初始化检查
      # - name: logstash-logs-init
      #  image: alpine:3.6
      #  command: ["/sbin/sysctl", "-w", "vm.max_map_count=262144"]    # 添加mmap计数限制，太低可能造成内存不足错误，在虚拟机中执行：sysctl -w vm.max_map_count=262114
      #  securityContext:    # 仅应用到指定的容器上，并且不会影响 volume
      #    privileged: true    # 允许特权容器
      volumes:
      - name: config-volume
        configMap:
          name: logstash-conf   # 引用 ConfigMap 中的 logstash.conf 配置
          items:
          - key: logstash.conf    # 对应 ConfigMap 中 data 下的logstash.conf 配置
            path: logstash.conf
      - name: timezone
        hostPath:
          path: /etc/localtime
      - name: config-yaml-volume
        configMap:
          name: logstash-yaml   # 引用 ConfigMap 中的 logstash-yaml 配置
          items:
          - key: logstash.yaml    # 对应 ConfigMap 中的 logstash.yaml 配置
            path: logstash.yaml
