Kubernetes_Server/Template/Devops/Logs/kubernetes-kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: kube-logs-elk
  labels:
    name: kibana
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    kubernetes.io/name: "Kibana"
    srv: srv-kibana
spec:
  type: NodePort
  ports:
  - port: 5601
    protocol: TCP
    targetPort: ui
  selector:
    name: kibana

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: kube-logs-elk
  labels:
    name: kibana
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    srv: srv-kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      name: kibana
  template:
    metadata:
      labels:
        name: kibana
    spec:
      containers:
      - name: kibana
        image: docker.io/kubeimages/kibana:7.9.3    # Consider using a more specific version or tag
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 300m
            memory: 256Mi
        volumeMounts:
        - name: config
          mountPath: /usr/share/kibana/config/kibana.yaml
          readOnly: true
          subPath: kibana.yaml
      volumes:
      - name: config
        configMap:
          name: kibana-config

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: kube-logs-elk
spec:
  ingressClassName: nginx
  rules:
  - host: kibana.erge.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
